<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="np.com.premlamsal.lovecalculator.MainActivity">
<ImageView
    android:layout_width="120dp"
    android:layout_height="120dp"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    android:background="@drawable/heart"
    />
   <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_love_calculator"
        android:layout_gravity="center"
       android:textColor="@android:color/holo_red_dark"
        android:layout_marginTop="10dp"
       />
    <EditText
        android:id="@+id/yourname"
        android:layout_marginTop="20dp"
       android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name"/>
    <EditText
        android:id="@+id/lovename"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_love_name"/>
    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_gravity="center"

        android:layout_marginTop="20dp"
        android:background="@android:color/holo_red_dark"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="40sp"
        android:id="@+id/showpercentage"/>
    <TextView
        android:id="@+id/about_calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/about_calculator"
        android:layout_gravity="end"
        android:layout_marginTop="30dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp" />
 <TextView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/about"
     android:layout_margin="5dp"/>

</LinearLayout>
